kcm_regionandlang: fix incorrect paper size example for some locales

kcm_regionandlang: fix incorrect paper size example for some locales

We decide paper size with measurement system, QLocale::ImperialUSSystem and QLocale::ImperialSystem are treated as "Letter", the rest "A4". Qt doesn't provide a direct method to determine paper size from locale. However, some locales use metric measurement system but Letter for paper size. Put these locales in a QSet and return 'Letter' for paper size example.

BUG: 488083